@@ -1,3 +1,4 @@
+2018-11-19 v1.0.16 support for PrestaShop version 1.6.1.23
 2018-10-21 v1.0.15 support for PrestaShop version 1.6.1.21-22
 2018-07-14 v1.0.14 support for PrestaShop version 1.6.1.20
 2018-06-17 v1.0.13 support for PrestaShop version 1.6.1.19
